[tool.poetry]
name = "fastapi-blog"
version = "0.1.0"
description = ""
authors = ["yetian29 <dathien000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic-settings = "^2.6.0"
motor = "^3.6.0"
punq = "^0.7.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
